Deleted quotes fomr line 10 so JS does not interpret at string value

--- a/prep-javascript-variables/index.html
+++ b/prep-javascript-variables/index.html
@@ -7,7 +7,7 @@
   <script>
     const fullName = 'Eric Do';
     console.log(fullName);
-    const numberOfPets = '3';
+    const numberOfPets = 3;
     console.log(numberOfPets);
     const likesVegetables = true;
     console.log(likesVegetables);
